# Work-Bench

./: README.md
CProject/: Makefile  README.md
PythonProject/: .gitignore  README.md  memory_gc.ipynb  pyproject.toml
PythonProject/ToF_Plotting/: t2_ToFploting.ipynb  t2_ToFploting.py
PythonProject/ToFpy/: AESOP_.py  AESOP_0423.py  AESOP_Test1.py  AESOP_import_testing.ipynb  AESOP_notes.py  mainV1.py  mod.py
PythonProject/ToFpy/ToFC/: mainTof.py  modTof.py  monte_carlo_input1ch1_09_05_2023.txt  monte_carlo_input1ch4_09_05_2023.txt
PythonProject/draw/: test.drawio
PythonProject/generators_iters_liam/: gen_iter.ipynb
PythonProject/guessingGame/: GuessingGameMicrowaveTimer.py  README.md
PythonProject/memory_liam/: gc_testing.py  memory_gc.ipynb  memory_gc.py  ref_gc.ipynb
PythonProject/py_c/test1_fib/: fibC.py  fib_withMod.py
PythonProject/py_c/test2_multi/: multip_normal.py
PythonProject/py_c/test3_concurrent/: mebot.py  mod.py
PythonProject/py_c/test4_classes/: mainp.py
PythonProject/py_guessingGame/: GuessingGame.py  GuessingGameTesting.ipynb
PythonProject/py_memory/: memory_gc.py
PythonProject/python_c/: fib.py  fib_normal_withC.py
PythonProject/python_c/test1_fib/: fib.py  mod1.py
PythonProject/python_c/test2_multi/: fib_multi.py  mod.py
PythonProject/python_c/test3_concurrent/: mebot2.py
PythonProject/python_c/test4_classes/: mod2.py
PythonProject/pythonproject/: GuessingGame.py  GuessingGameTesting.ipynb  Lecture17.ipynb  README.md  fileWithNotes.ipynb
PythonProject/pythonproject/day1/: Lecture17.ipynb  testnotebook.ipynb
(+5 files in other folders)
