[tool.poetry]
name = "PythonProject"
version = "0.1.0"
description = ""
authors = ["Drixitel <mpmunoz1993@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
# python = ">=3.9,<3.12"
numpy = "^1.22.4"
matplotlib = "^3.7.0"
scipy = "^1.10.0"
notebook = "^6.5.2"
ipympl = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
